# vellora

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.example  README.md  RELEASING.md  SECURITY.md  biome.json  package-lock.json  package.json  tsconfig.base.json  typedoc.json  vitest.config.ts
.changeset/: README.md  config.json  docs-positioning-refresh.md  native-prebuild-launch.md  rendering-quality-alpha1.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  resource-benchmarks.yml
benchmarks/: README.md  config.mjs  geometry-fidelity.mjs  package.json  run.mjs  visual-fidelity.mjs
benchmarks/adapters/: gotenberg.mjs  playwright.mjs  puppeteer.mjs  vellora-chromium.mjs  vellora.mjs  weasyprint.mjs  weasyprint_worker.py
benchmarks/lib/: equivalence.mjs  measure.mjs  report.mjs  stats.mjs  visual-renderers.mjs
crates/vellora-core/: Cargo.toml
crates/vellora-core/src/: blitz_engine.rs  css_scan.rs  fonts.rs  html_normalize.rs  layout_normalize.rs  lib.rs  page_css.rs  pagination.rs  pdf.rs  validation.rs
crates/vellora-core/tests/: font_resources.rs  image_resources.rs  layout_fidelity.rs  pagination_correctness.rs  pagination_edges.rs  pipeline.rs  spike_a_blitz.rs  spike_b_krilla.rs  validation.rs
crates/vellora-core/tests/fixtures/: invoice.html
crates/vellora-napi/: Cargo.toml
crates/vellora-napi/src/: lib.rs
docs/: compatibility.md  index.md  migrating.md  recipes.md
docs/.vitepress/: config.ts
docs/assets/visual-evidence/: index.html  manifest.json
docs/guide/: concurrency.md  fidelity.md  fonts.md  getting-started.md  images.md  invoices.md  pdfa.md  streaming.md
docs/public/: llms.txt  robots.txt
docs/superpowers/plans/: 2026-06-25-geometric-fidelity-horizontal-baseline.md
docs/superpowers/specs/: 2026-06-25-geometric-fidelity-horizontal-baseline-design.md
examples/: batch-concurrency.ts  custom-fonts.ts  pdfa-compliance.ts  render-boleto.ts  render-invoice.ts  render-notification.ts  render-receipt.ts  render-to-http-stream.ts
fixtures/: README.md
fixtures/boleto/: data.json  index.html
fixtures/invoice/: data.json  index.html
fixtures/invoice-broken/: data.json  index.html
fixtures/notification/: data.json  index.html
fixtures/receipt/: data.json  index.html
scripts/: check-install-scripts.mjs  gen-compatibility.mjs  gen-third-party-notices.mjs  render-visual-fixtures.mjs  set-release-version.mjs
